--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
@@ -29,13 +30,17 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@hz-components/react-base": "^1.0.0",
     "classnames": "^2.2.6",
+    "hz-components-tqt": "^1.0.13",
     "lodash.debounce": "^4.0.8",
     "lodash.findindex": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "react": "^16.12.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.12.0",
     "react-virtualized": "^9.21.2",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "untd": "^1.0.5"
   }
 }
